--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="text">
                     <p>Hello my name is</p>
                     <h3>erman ramiqi</h3>
-                    <p>im going to be a future software developer</p>
+                    <p>im a future software developer</p>
                 </div>
                 <div class="foto">
                     <img class="gifi" src="./giphy.gif" alt="">
